sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: ')' expected but ',' found.
  for (i <- 1,getValueCount()-1) {
             ^AlgInsertionSort:5: error: ';' expected but ')' found.
  for (i <- 1,getValueCount()-1) {
                               ^