sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v:Int=0
  var j:Int=0
  for (i <- 1,getValueCount()-1) {
    v=getValue(i)
    j=i
    while (getValue(j-1)>v) {
      setValue(j, getValue(j-1))
      j=j-1
    }
    setValue(j,v)
  }
}